@@ -1,3 +1,10 @@
+2006-06-11  Darin Adler  <darin@apple.com>
+
+        - try to fix Windows build
+
+        * COM/WebKitDLL.cpp: (loadResourceIntoArray): Use Vector<char> instead of
+        DeprecatedByteArray.
+
 2006-06-11  Mitz Pettel  <opendarwin.org@mitzpettel.com>
 
         Reviewed by Tim H.
